--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,15 +31,15 @@
 
         <include
             android:id="@+id/include"
-            layout="@layout/progress_bar"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            layout="@layout/progress_bar_binding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.48000002"
+            app:layout_constraintVertical_bias="0.5"
             bind:viewModel="@{viewModel.progressBarViewModel}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
