--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -1,24 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout>
-    <data>
-        <import type="android.view.View"/>
-        <variable
-            name="viewModel"
-            type="com.uniyaz.mobiltif.viewmodel.ProgressBarViewModel" />
-    </data>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/loadingPanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <!--<com.uniyaz.mobiltif.ui.components.CustomProgressBar-->
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="false"
-            android:visibility="@{viewModel.showProgressBar ? View.VISIBLE : View.GONE}"
-            />
-    </RelativeLayout>
-</layout>
+<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.AppCompat.ProgressBar"
+    android:id="@+id/progressBar"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:indeterminate="false"
+    android:visibility="gone"
+    />
