--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="android:textSize">26sp</item>
         <item name="android:layout_marginBottom">20dp</item>
         <item name="android:paddingBottom">20dp</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
 
