--- a/app/src/main/res/layout/popup_call_room_and_envanter.xml
+++ b/app/src/main/res/layout/popup_call_room_and_envanter.xml
@@ -38,9 +38,8 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/bg_edittext"
         android:drawableRight="@drawable/ic_search"
-        android:text="61"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCallRoom" />
@@ -53,9 +52,8 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/bg_edittext"
         android:drawableRight="@drawable/ic_search"
-        android:text="61"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/etCallQrCodeOda"
         app:layout_constraintHorizontal_bias="0.648"
         app:layout_constraintStart_toStartOf="@+id/etCallQrCodeOda"
