--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">flextest2.uni-yaz.com</domain>
+        <domain includeSubdomains="true">https://demoybs.besiktas.bel.tr</domain>
     </domain-config>
 </network-security-config>
